--- a/ch11.md
+++ b/ch11.md
@@ -1,17 +1,17 @@
 # Functional-Light JavaScript
 # Chapter 11: Putting It All Together
 
-By now, you have everything you need to understand functional-light JavaScript. There's no more new concepts to introduce.
+By now, you have everything you need to understand Functional-Light JavaScript. There's no more new concepts to introduce.
 
 In this final chapter, our main goal is conceptual cohesiveness. We'll look at code that brings many of the major themes from this book together -- application of what we've learned. Above all, this example code is intended to illustrate the "Functional Light" approach to JavaScript -- that is, balance and pragmatism over dogma.
 
-You'll want to practice these techniques yourself, extensively. Digesting this chapter is critical to helping you apply FP principles to your real world code.
+You'll want to practice these techniques yourself, extensively. Digesting this chapter is critical to helping you apply FP principles to your real-world code.
 
 ## Setup
 
 Let's build a simple stock ticker widget.
 
-**Note:** For reference, the entirety of the code for this example resides in the `ch11-code/` sub directory -- see the GitHub repository for this book (https://github.com/getify/Functional-Light-JS). Also, selected FP helpers we've discussed throughout this book that we need for this example are included in `ch11-code/fp-helpers.js`. In this chapter we will only focus on the relevant parts of the code for our discussion.
+**Note:** For reference, the entirety of the code for this example resides in the `ch11-code/` sub-directory -- see the GitHub repository for this book (https://github.com/getify/Functional-Light-JS). Also, selected FP helpers we've discussed throughout this book that we need for this example are included in `ch11-code/fp-helpers.js`. In this chapter we will only focus on the relevant parts of the code for our discussion.
 
 First, let's talk about the markup for this widget, so we have somewhere to display our information. We start out with an empty `<ul ..>` element in our `ch11-code/index.html` file, but while running, the DOM will be populated to look like:
 
@@ -35,7 +35,7 @@ First, let's talk about the markup for this widget, so we have somewhere to disp
 </ul>
 ```
 
-Before we go any further, let me remind you: interacting with the DOM is I/O, and that means side-effects. We can't eliminate these side effects, but we can limit and control them. We'll want to be really intentional about minimizing the surface area of our application that deals with the DOM. We learned all about these techniques in Chapter 5.
+Before we go any further, let me remind you: interacting with the DOM is I/O, and that means side effects. We can't eliminate these side effects, but we can limit and control them. We'll want to be really intentional about minimizing the surface area of our application that deals with the DOM. We learned all about these techniques in Chapter 5.
 
 Summarizing our widget's functionality: the code will add the `<li ..>` elements each time a new-stock event is "received", and will update the price and change as stock-update events come through.
 
@@ -189,7 +189,7 @@ These should be mostly self-explanatory.
 
 Notice that I called out the side effects of mutating a DOM element's state. We can't as easily clone a DOM object and replace it, so we settle here for a side effect of changing an existing one. At least if we have a bug in our DOM rendering, we can easily search for those code comments to narrow in on likely suspects.
 
-Here's some other miscellaneous helpers:
+Here are some other miscellaneous helpers:
 
 ```js
 function stripPrefix(prefixRegex,val) {
@@ -244,7 +244,7 @@ function getStockInfoChildElems(stockElem) {
 
 `getStockElem(..)` starts with the `tickerElem` DOM element for our widget, retrieves its child elements, then filters to make sure we have the element matching the specified stock identifier. `getStockInfoChildElems(..)` does almost the same thing, except it starts with a stock element, and narrows with different filters.
 
-Both utilities filter out text nodes (since they don't work the same as real DOM nodes), and both utilities return an array of DOM elements, even if its just a single element.
+Both utilities filter out text nodes (since they don't work the same as real DOM nodes), and both utilities return an array of DOM elements, even if it's just a single element.
 
 ### Main API
 
@@ -267,7 +267,7 @@ var stockTickerUI = {
 };
 ```
 
-Let's first examine `updateStock(..)`, as its the simplest of the three:
+Let's first examine `updateStock(..)`, as it's the simplest of the three:
 
 ```js
 var stockTickerUI = {
@@ -354,7 +354,7 @@ Next, we're going to zip the list of `<span>`s back with the ordered data values
 zip( stockInfoChildElemList, orderedDataVals )
 ```
 
-An interesting wrinkle that wasn't at all obvious up to this point is that because of how we defined the observables transforms, new-stock message objects will have a `name` property in `data` to match up with the `<span class="stock-name">` element, but `name` will be absent on stock-update message objects.
+An interesting wrinkle that wasn't at all obvious up to this point is that because of how we defined the observable's transforms, new-stock message objects will have a `name` property in `data` to match up with the `<span class="stock-name">` element, but `name` will be absent on stock-update message objects.
 
 If the data message object doesn't have a property, we shouldn't update that corresponding DOM element. So, we need to `filterOut(..)` any tuples where the second position (the data value, in this case) is `undefined`:
 
@@ -493,9 +493,9 @@ Finally, a plain ol' DOM mutation side effect to append the new stock element to
 appendDOMChild( tickerElem, stockElem );
 ```
 
-Phew! Did you follow all that? I recommend you go back and re-read that discussion a few times and practice with the code, before moving on.
+Phew! Did you follow all that? I recommend re-reading that discussion a few times, and practicing with the code, before you move on.
 
-### Subscribing To Observables
+### Subscribing to Observables
 
 Our last major task is to subscribe to the observables defined in `ch11-code/stock-ticker-events.js`, attaching these subscriptions to the appropriate main UI methods (`addStock(..)` and `updateStock(..)`).
 
@@ -510,9 +510,9 @@ var stockTickerUIMethodsWithDOMContext = map(
 ( [ stockTickerUI.addStock, stockTickerUI.updateStock ] );
 ```
 
-We `curry(..)` the `partialRight(..)` utility so we can specify the second argument (`ticker` DOM element) first; `map(..)` then respectively provides the first argument to each `partialRight(..)` call -- each UI function we want to partially-apply. Now these two partially-applied functions are suitable as observable-subscription handlers.
+We `curry(..)` the `partialRight(..)` utility so we can specify the second argument (`ticker` DOM element) first; `map(..)` then respectively provides the first argument to each `partialRight(..)` call -- each UI function we want to partially apply. Now these two partially applied functions are suitable as observable-subscription handlers.
 
-Though we're using closure to preserve the `ticker` state with these two functions, in Chapter 7 we saw that we could have "kept" this `ticker` value as a property on an object, perhaps via `this`-binding each function to `stockTickerUI`. Since `this` is an implicit input (see Chapter 2) and that's generally not as preferable, I chose the closure form over the object form.
+Though we're using closure to preserve the `ticker` state with these two functions, in Chapter 7 we saw that we could have "kept" this `ticker` value as a property on an object, perhaps via `this`-binding each function to `stockTickerUI`. Because `this` is an implicit input (see Chapter 2) and that's generally not as preferable, I chose the closure form over the object form.
 
 To subscribe to the observables, let's make an unbound-method helper:
 
@@ -533,7 +533,7 @@ each( spreadArgs( subscribeToObservable ) )
 ( zip( stockTickerUIMethodsWithDOMContext, stockTickerObservables ) );
 ```
 
-Since we're technically mutating the state of those observables to subscribe to them, and moreover since we're using `each(..)` -- pretty much always associated with side effects! -- we call that fact out with our code comment.
+We're technically mutating the state of those observables to subscribe to them, and moreover, we're using `each(..)` -- pretty much always associated with side effects! -- so we call that out with our code comment.
 
 That's it! Spend the same time reviewing and comparing this code to its imperative alternatives as we did with the stock ticker events discussion earlier. Really, take your time. I know it's been a lot to read, but your whole journey through this book comes down to being able to digest and understand this kind of code.
 
@@ -541,9 +541,9 @@ How do you feel now about using FP in a balanced way in your JavaScript? Keep pr
 
 ## Summary
 
-The example code we discussed in this chapter should be viewed in its entirety, not just in the broken out snippets as presented in this chapter. Stop right now and go read through the full files, if you haven't already. Make sure you understand them in full context.
+The example code we discussed in this chapter should be viewed in its entirety, not just in the broken-out snippets as presented in this chapter. Stop right now and go read through the full files, if you haven't already. Make sure you understand them in full context.
 
-This example code is not meant to be prescriptive of exactly how you should write your code. It's meant to be more descriptive of how to think about and begin approaching such tasks with FP-light techniques. It's meant to draw as many correlations between the different concepts of this book as possible. It's meant to explore FP in the context of more "real" code than we typically afford for a single snippet.
+This example code is not meant to be prescriptive of exactly how you should write your code. It's meant to be more descriptive of how to think about and begin approaching such tasks with FP-Light techniques. It's meant to draw as many correlations between the different concepts of this book as possible. It's meant to explore FP in the context of more "real" code than we typically afford for a single snippet.
 
 I am quite sure that as I learn FP better on my own journey, I will continue to improve how I would write this example code. What you see now is just a snapshot on my curve. I hope it will just be such for you, as well.
 
@@ -555,6 +555,6 @@ As we draw the main text of this book to a close, I want to remind you of this r
 
 It's so important that you internalize the truth of that graph and set realistic expectations for yourself on this journey to learn and apply FP principles to your JavaScript. You've made it this far, and that's quite an accomplishment.
 
-But don't stop when you dip towards that trough of despair and disenchantment. What's waiting on the other side is a way of thinking about and communicating with your code that's more readable, understandable, verifable, and ultimately, more reliable.
+But don't stop when you dip toward that trough of despair and disenchantment. What's waiting on the other side is a way of thinking about and communicating with your code that's more readable, understandable, verifiable, and ultimately, more reliable.
 
-I can't think of any more noble goal for us as developers to strive towards. Thanks for sharing in my journey to learn FP principles in JavaScript. I hope your's is as rich and hopeful as mine!
+I can't think of any more noble goal for us as developers to strive toward. Thanks for sharing in my journey to learn FP principles in JavaScript. I hope your experience is as rich and hopeful as mine!
